/*
This file is part of the AtomBPMN (R) project.
Copyright (c) 2025 Matreska Market LLC (ООО «Matreska Market»).
Authors: Matreska Team.

This project is dual-licensed under AGPL-3.0 and AtomBPMN Commercial License.
*/

syntax = "proto3";

package expression;

option go_package = "atom-engine/proto/expression/expressionpb";

// Expression service for FEEL expression evaluation
service ExpressionService {
    // Evaluate a FEEL expression
    rpc EvaluateExpression(EvaluateExpressionRequest) returns (EvaluateExpressionResponse);
    
    // Evaluate multiple expressions in batch
    rpc EvaluateBatch(EvaluateBatchRequest) returns (EvaluateBatchResponse);
    
    // Parse expression and return AST
    rpc ParseExpression(ParseExpressionRequest) returns (ParseExpressionResponse);
    
    // Validate expression syntax
    rpc ValidateExpression(ValidateExpressionRequest) returns (ValidateExpressionResponse);
    
    // Get supported functions list
    rpc GetSupportedFunctions(GetSupportedFunctionsRequest) returns (GetSupportedFunctionsResponse);
    
    // Evaluate condition (boolean result)
    rpc EvaluateCondition(EvaluateConditionRequest) returns (EvaluateConditionResponse);
    
    // Extract variables from expression
    rpc ExtractVariables(ExtractVariablesRequest) returns (ExtractVariablesResponse);
    
    // Test expression with sample data
    rpc TestExpression(TestExpressionRequest) returns (TestExpressionResponse);
}

// Evaluate expression request
message EvaluateExpressionRequest {
    string expression = 1;
    string context = 2; // JSON string with variables
    string tenant_id = 3;
}

message EvaluateExpressionResponse {
    string result = 1; // JSON string result
    bool success = 2;
    string error_message = 3;
    string result_type = 4; // string, number, boolean, object, array, null
}

// Evaluate batch request
message EvaluateBatchRequest {
    repeated ExpressionItem expressions = 1;
    string context = 2; // JSON string with variables
    string tenant_id = 3;
}

message ExpressionItem {
    string id = 1;
    string expression = 2;
}

message EvaluateBatchResponse {
    repeated ExpressionResult results = 1;
    bool success = 2;
    string error_message = 3;
}

message ExpressionResult {
    string id = 1;
    string result = 2; // JSON string result
    bool success = 3;
    string error_message = 4;
    string result_type = 5;
}

// Parse expression request
message ParseExpressionRequest {
    string expression = 1;
}

message ParseExpressionResponse {
    string ast = 1; // JSON string AST
    bool success = 2;
    string error_message = 3;
    repeated string variables = 4; // extracted variable names
}

// Validate expression request
message ValidateExpressionRequest {
    string expression = 1;
    string context_schema = 2; // JSON schema for validation
}

message ValidateExpressionResponse {
    bool valid = 1;
    string error_message = 2;
    repeated ValidationError errors = 3;
    repeated string warnings = 4;
}

message ValidationError {
    string message = 1;
    int32 line = 2;
    int32 column = 3;
    string error_type = 4;
}

// Get supported functions request
message GetSupportedFunctionsRequest {
    string category = 1; // string, numeric, boolean, list, context, date, etc.
}

message GetSupportedFunctionsResponse {
    repeated FunctionInfo functions = 1;
}

message FunctionInfo {
    string name = 1;
    string category = 2;
    string description = 3;
    repeated ParameterInfo parameters = 4;
    string return_type = 5;
    repeated string examples = 6;
}

message ParameterInfo {
    string name = 1;
    string type = 2;
    bool required = 3;
    string description = 4;
}

// Evaluate condition request
message EvaluateConditionRequest {
    string condition = 1;
    string context = 2; // JSON string with variables
    string tenant_id = 3;
}

message EvaluateConditionResponse {
    bool result = 1;
    bool success = 2;
    string error_message = 3;
}

// Extract variables request
message ExtractVariablesRequest {
    string expression = 1;
}

message ExtractVariablesResponse {
    repeated string variables = 1;
    bool success = 2;
    string error_message = 3;
}

// Test expression request
message TestExpressionRequest {
    string expression = 1;
    repeated TestCase test_cases = 2;
}

message TestCase {
    string name = 1;
    string context = 2; // JSON string with variables
    string expected_result = 3; // JSON string expected result
    string expected_type = 4;
}

message TestExpressionResponse {
    repeated TestResult results = 1;
    bool all_passed = 2;
    string summary = 3;
}

message TestResult {
    string test_name = 1;
    bool passed = 2;
    string actual_result = 3;
    string expected_result = 4;
    string error_message = 5;
    string actual_type = 6;
    string expected_type = 7;
}
